# fastapi-otel

./: Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  mise.toml  otel-collector-config.yaml  pyproject.toml
scripts/: roll_dice.py
