[project]
name = "fastapi-otel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ruff>=0.11.11",
]

[tool.ruff]
line-length = 100
select = ["E4", "E7", "E9", "F"]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "google"
